# docs/swagger.json
@@ -4,6 +4,52 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/public/user/login": {
+            "post": {
+                "description": "用于用户登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户管理模块"
+                ],
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "description": "注册参数",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "10000": {
+                        "description": "操作成功",
+                        "schema": {
+                            "$ref": "#/definitions/response.BasicResponse-any"
+                        }
+                    },
+                    "10001": {
+                        "description": "操作失败",
+                        "schema": {
+                            "$ref": "#/definitions/response.BasicResponse-any"
+                        }
+                    },
+                    "10002": {
+                        "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.BasicResponse-any"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/public/user/signup": {
             "post": {
                 "description": "用于用户注册帐号",
@@ -16,7 +62,7 @@
                 "tags": [
                     "用户管理模块"
                 ],
-                "summary": "用户登录",
+                "summary": "用户注册",
                 "parameters": [
                     {
                         "description": "注册参数",
@@ -46,18 +92,27 @@
                         "schema": {
                             "$ref": "#/definitions/response.BasicResponse-any"
                         }
-                    },
-                    "20000": {
-                        "description": "邮箱已注册",
-                        "schema": {
-                            "$ref": "#/definitions/response.BasicResponse-any"
-                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "request.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "request.SignUpRequest": {
             "type": "object",
             "required": [
